Changed wording on test 2 file

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -36,6 +36,8 @@
 
     <hr />
 
+        <table th:replace = "fragments :: table-display"></table>
+
     <!-- TODO #4 - Loop over the search results to display all job fields. -->
 
 </div>
